--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,11 @@ dependencies = [
 dev = [
     "pytest>=8.3.3",
 ]
+
+# https://docs.astral.sh/uv/concepts/projects/#libraries
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["myproject"]
