--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,12 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "editables>=0.5",
+    "hatchling>=1.26.3",
     "pytest>=8.3.3",
 ]
 
-# https://docs.astral.sh/uv/concepts/projects/#libraries
+# https://docs.astral.sh/uv/concepts/projects/init/#libraries
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
